<resources>
    <string name="app_name">MediaCoreDemo</string>
    <string name="record">record</string>
    <string name="done">done</string>
    <string name="select">select a video</string>
    <string name="edit_video">Video Editor</string>
    <string name="filter">Filter</string>
    <string name="add_music">Add Music</string>
    <string name="record_video">Video Recorder</string>
    <string name="back">Back</string>
    <string name="publish">Done</string>
    <string name="edit_meta_video">Edit meta</string>
</resources>
