<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.zxzx74147.mediacoredemo.MainActivity" />
    </data>

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">



        <Button
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:onClick="@{handler::onRecord}"
            android:text="@string/record_video"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:onClick="@{handler::onVideoEdit}"
            android:text="@string/edit_video"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:onClick="@{handler::onMetaEdit}"
            android:text="@string/edit_meta_video"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>