<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.zxzx74147.mediacoredemo.test.VideoEditorTestActivity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gap_80"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
                android:gravity="center"
                android:onClick="@{() -> handler.finish()}"
                android:text="@string/back"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit_video"
                android:textColor="@color/white"
                android:textSize="@dimen/default_size_32" />

            <TextView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:gravity="center"
                android:onClick="@{handler.onDone}"
                android:paddingRight="@dimen/default_gap_30"
                android:text="@string/publish"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_video_edit"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">


            <com.zxzx74147.mediacore.player.FilterVideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <SeekBar
                android:id="@+id/video_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_gap_4"
                android:layout_alignParentBottom="true"
                android:max="1000"
                android:padding="0dip"
                android:progressDrawable="@drawable/progress_h"
                android:thumb="@null" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_gap_80"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_gap_30"
                    android:text="@string/filter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_size_28"
                    android:textStyle="bold" />

                <TextView
                    android:onClick="@{handler::onSelect}"
                    android:text="@string/select"
                    android:layout_marginLeft="@dimen/default_gap_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textColor="@color/white"
                    android:textSize="@dimen/default_size_28"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="1dip"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_gap_30"
                    android:drawableLeft="@drawable/music"
                    android:drawablePadding="@dimen/default_gap_10"
                    android:gravity="center"

                    android:text="@string/add_music"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_size_24"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_div" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/filter_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</layout>